--- a/index.html
+++ b/index.html
@@ -1895,31 +1895,31 @@
             </div>
             <div class="ud-brands-logo flex items-center flex-wrap">
               <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                <a href="https://tailgrids.com" target="_blank" rel="nofollow noopner">
+                <a href="https://madrasdeck.com" target="_blank" rel="nofollow noopner">
                   <img src="assets/images/brands/1.png" alt="tailgrids"
                     class="grayscale hover:filter-none duration-300" />
                 </a>
               </div>
               <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                <a href="https://ayroui.com" target="_blank" rel="nofollow noopner">
+                <a href="https://artheatre.club" target="_blank" rel="nofollow noopner">
                   <img src="assets/images/brands/2.png" alt="ayroui"
                     class="grayscale hover:filter-none duration-300" />
                 </a>
               </div>
               <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                <a href="https://uideck.com" target="_blank" rel="nofollow noopner">
+                <a href="https://avcast.live" target="_blank" rel="nofollow noopner">
                   <img src="assets/images/brands/3.png" alt="uideck"
                     class="grayscale hover:filter-none duration-300" />
                 </a>
               </div>
               <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                <a href="https://graygrids.com" target="_blank" rel="nofollow noopner">
+                <a href="https://windowcorp.in" target="_blank" rel="nofollow noopner">
                   <img src="assets/images/brands/6.png" alt="graygrids"
                     class="grayscale hover:filter-none duration-300" />
                 </a>
               </div>
               <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                <a href="https://lineicons.com" target="_blank" rel="nofollow noopner">
+                <a href="https://bakerscake.in" target="_blank" rel="nofollow noopner">
                   <img src="assets/images/brands/5.png" alt="lineicons"
                     class="grayscale hover:filter-none duration-300" />
                 </a>
