--- a/index.html
+++ b/index.html
@@ -2544,13 +2544,9 @@
                     md:justify-start
                     -mx-3
                   ">
-                <a href="javascript:void(0)" class="text-base text-[#f3f4fe] hover:text-primary px-3">
+                <a href="compliance.html#privacypolicy" class="text-base text-[#f3f4fe] hover:text-primary px-3">
                   Privacy policy
-                </a>
-                <a href="javascript:void(0)" class="text-base text-[#f3f4fe] hover:text-primary px-3">
-                  Legal notice
-                </a>
-                <a href="javascript:void(0)" class="text-base text-[#f3f4fe] hover:text-primary px-3">
+                <a href="compliance.html#tnc" class="text-base text-[#f3f4fe] hover:text-primary px-3">
                   Terms of service
                 </a>
               </div>
